# modularis-rag

./: CITATION.cff  LICENSE  Readme.md  Readme_de.md  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml  docker_pipeline_config.json  docker_retrieval_bm25_config.json  docker_retrieval_config.json
evaluation/: main.py  pipeline.py  registry.py  run_batch_evaluation.py
evaluation/cli/: evaluation_cli.py
evaluation/core/: base_evaluation.py  base_interfaces.py  database_evaluator.py  discovery.py  metrics_calculator.py  reporting.py  visualizing.py
evaluation/evaluation_methods/: beir_evaluation.py  google_nq_evaluation.py
evaluation/metrics/: hit.py  mrr.py  ndcg.py  recall.py
rag_pipeline/core/: base_interfaces.py  config.py  factory.py  metrics.py  models.py  registry.py
rag_pipeline/embedders/: ollama_embedder.py
rag_pipeline/ingestion/: interfaces.py  main.py  main_builder.py  pipeline.py  registry.py
rag_pipeline/ingestion/chunkers/: hugging_face_token_chunker.py  markdown_header_text_splitter_chunker.py  recursive_character_chunker.py  semantic_text_chunker.py  window_chunker.py
rag_pipeline/ingestion/converters/: bypass_converter.py  html_to_markdown_converter.py  url_to_markdown_converter.py
rag_pipeline/ingestion/db_writers/: postgres_db_writer.py
rag_pipeline/ingestion/extractors/: link_extractor.py  markdown_code_block_extractor.py  markdown_table_extractor.py
rag_pipeline/pipeline_builder/: builder.py
rag_pipeline/retrieval/: interfaces.py  main.py  main_builder.py  pipeline.py  registry.py
(+28 files in other folders)
